Correct contact page

--- a/force-app/mainPackage/default/aura/CustomActivityFeed/CustomActivityFeed.cmp
+++ b/force-app/mainPackage/default/aura/CustomActivityFeed/CustomActivityFeed.cmp
@@ -9,7 +9,7 @@
     <lightning:quickActionAPI aura:id="quickActionAPI"/>
     
    
-        
+    <lightning:card>
         <aura:set attribute="title">
             <lightning:icon iconName="standard:feed" size="medium" class="activity-icon"></lightning:icon>
             <span class="slds-text-heading_small slds-m-left_small" style="font-weight:700;">Activity Timeline</span>
@@ -26,20 +26,22 @@
             <ul>
                 
                 <aura:iteration items="{!v.activities}" var="a">
-                	<c:ActivityFeedItem icon="{!a.icon__c}" 
-                                    title="{!a.Name}" 
-                                    message="{!a.message__c}"  
-                                    numDaysAgo="{!a.days_ago__c}" 
-                                    time="{!a.time__c}"
-                                    id="{!a.Id}"    />
+                    <c:ActivityFeedItem icon="{!a.icon__c}" 
+                                        title="{!a.Name}" 
+                                        message="{!a.message__c}"  
+                                        numDaysAgo="{!a.days_ago__c}" 
+                                        time="{!a.time__c}"
+                                        id="{!a.Id}"    />
                 </aura:iteration>
-               
-
+                
+                
             </ul>            
         </div>
         
         <aura:set attribute="footer">
-        	<lightning:button label="View All" variant="bare" onclick="{!c.gotoActivityList}"></lightning:button>
+            <lightning:button label="View All" variant="bare" onclick="{!c.gotoActivityList}"></lightning:button>
         </aura:set>
+    </lightning:card>    
+        
          
 </aura:component>
