--- a/force-app/mainPackage/default/layouts/portal_feed_item__c-feed item Layout.layout-meta.xml
+++ b/force-app/mainPackage/default/layouts/portal_feed_item__c-feed item Layout.layout-meta.xml
@@ -110,6 +110,10 @@
                 <behavior>Edit</behavior>
                 <field>SLA_achieved_since__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>News_List_Index__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
