Modified google api logic

--- a/force-app/mainPackage/default/aura/DPFeed/DPFeed.cmp
+++ b/force-app/mainPackage/default/aura/DPFeed/DPFeed.cmp
@@ -23,6 +23,7 @@
     <!-- Google news feeds  -->
     <aura:attribute name="googleNewsToken" type="String" />
     <aura:attribute name="googleNewSearchKey" type="String" />
+    <aura:attribute name="googleNewEnabled" type="String" />
     
 	<!-- generic modal - will show upon event //-->
         <aura:if isTrue="{!v.showModal}">
