--- a/force-app/mainPackage/default/aura/DE_Custom_Theme/DE_Custom_Theme.css
+++ b/force-app/mainPackage/default/aura/DE_Custom_Theme/DE_Custom_Theme.css
@@ -1,8 +1,3 @@
-.THIS {
-    margin-top: 90px;
-    position: relative;
-    
-}
 
 .THIS .menu_item_container {
     z-index: 4;
@@ -19,22 +14,22 @@
 .THIS .menu_item {
     display: inline-block;
     text-align: center;
-    border-right: 1px solid #DEE1E3;
-    height: 90px;
-    padding-top: 15px;
+    /* border-right: 1px solid #DEE1E3; */
+    /* height: 90px; */
+    /* padding-top: 15px; */
 }
 
 .THIS .menu_item_search {
-    border-right: 1px solid #DEE1E3;
+    /* border-right: 1px solid #DEE1E3; */
    	padding: 1rem;
-    height: 90px;
+    /* height: 90px; */
     padding-top: 1.6rem;
 }
 
 .THIS .dealerportal {
     display: inline-block;
     text-align: center;
-    height: 90px;
+    /* height: 90px; */
     padding-top: 10px;
 }
 
@@ -86,4 +81,74 @@
 
 .THIS .menu-link-active svg{
     fill:#4A90E2;
+}
+
+
+/* Volkswagen addon */
+
+/*
+.THIS .jVPQXo {
+    width: 100%;
+    padding-bottom: 12px;
+    padding-top: 16px;
+    height: 60px;
+    transform: translateZ(0px);
+    color: rgb(0, 30, 80);
+    background-color: rgba(255, 255, 255, 0.98);
+    transition: height 0.3s ease-in 0s;
+}
+*/
+
+
+
+.THIS .imNMYb {
+    width: 100%;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    pointer-events: none;
+    position: absolute;
+    top: 10px;
+    height: 60px;
+}
+.THIS .hokKXU {
+    flex-shrink: 0;
+    pointer-events: auto;
+    height: 32px;
+    width: 32px;
+    overflow: hidden;
+    margin: 0px 8px;
+}
+
+.THIS .hokKXU {
+    height: 48px;
+    width: 48px;
+    margin: 0px 12px;
+}
+
+.THIS .eOckfd {
+    height: 2px;
+    background-color: rgb(0, 30, 80);
+    width: 100%;
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+}
+
+.THIS .bsIxH {
+    flex-basis: 270%;
+}
+
+.THIS .StyledPlainLink-fjvMhd{
+    pointer-events: none;
+    cursor: default;
+}
+
+.dAiRow{
+    width: 36px;
+    margin-left: 9px;
+    margin-top: 6px;
+}
+
+.dealer-portal-text{
+    width: 360px;
 }
