--- a/force-app/mainPackage/default/aura/DE_Custom_Theme/DE_Custom_Theme.css
+++ b/force-app/mainPackage/default/aura/DE_Custom_Theme/DE_Custom_Theme.css
@@ -5,10 +5,14 @@
     top: 0px;
     left: 0px;
     width: 100%;
-    -webkit-box-shadow: -1px 3px 5px 1px rgba(209,209,209,1);
+    height: 65px;
+    /* -webkit-box-shadow: -1px 3px 5px 1px rgba(209,209,209,1);
     -moz-box-shadow: -1px 3px 5px 1px rgba(209,209,209,1);
-    box-shadow: -1px 3px 5px 1px rgba(209,209,209,1);
+    box-shadow: -1px 3px 5px 1px rgba(209,209,209,1); */
     background-color: #fff;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .THIS .menu_item {
@@ -19,12 +23,12 @@
     /* padding-top: 15px; */
 }
 
-.THIS .menu_item_search {
-    /* border-right: 1px solid #DEE1E3; */
+/* .THIS .menu_item_search {
+    /border-right: 1px solid #DEE1E3; 
    	padding: 1rem;
-    /* height: 90px; */
+    height: 90px; 
     padding-top: 1.6rem;
-}
+} */
 
 .THIS .dealerportal {
     display: inline-block;
@@ -55,12 +59,13 @@
     width: 100%;
     margin: 0 auto;
     z-index: -1;
+    margin-top: 70px;
 }
 
 .THIS .menu-link {
     color: #8a8a8a;
 }
-
+/*
 .THIS a:hover{
     color: #4A90E2;
     text-decoration: none;
@@ -68,7 +73,8 @@
 
 .THIS a:hover svg{
     fill:#4A90E2;    
-}
+}*/
+
 
 .THIS .selfServiceProfileMenuTrigger a {
     color:#8A8A8A;
@@ -108,7 +114,7 @@
     align-items: center;
     pointer-events: none;
     position: absolute;
-    top: 10px;
+    top: 13px;
     height: 60px;
 }
 .THIS .hokKXU {
@@ -150,5 +156,16 @@
 }
 
 .THIS .dealer-portal-text{
-    width: 360px;
+    width: 400px;
+    font-size: 0.8rem;
+}
+
+.THIS .searchAndProfile{
+    display: flex;
+    flex-direction: row;
+    margin-top: -8px;
+    margin-right: 15px;
+}
+.THIS .searchComp{
+    width: 200px;
 }
