--- a/force-app/mainPackage/default/aura/DE_Custom_Theme/DE_Custom_Theme.css
+++ b/force-app/mainPackage/default/aura/DE_Custom_Theme/DE_Custom_Theme.css
@@ -6,39 +6,8 @@
     left: 0px;
     width: 100%;
     height: 65px;
-    /* -webkit-box-shadow: -1px 3px 5px 1px rgba(209,209,209,1);
-    -moz-box-shadow: -1px 3px 5px 1px rgba(209,209,209,1);
-    box-shadow: -1px 3px 5px 1px rgba(209,209,209,1); */
     background-color: #fff;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.THIS .menu_item {
-    display: inline-block;
-    text-align: center;
-    /* border-right: 1px solid #DEE1E3; */
-    /* height: 90px; */
-    /* padding-top: 15px; */
-}
-
-/* .THIS .menu_item_search {
-    /border-right: 1px solid #DEE1E3; 
-   	padding: 1rem;
-    height: 90px; 
-    padding-top: 1.6rem;
-} */
-
-.THIS .dealerportal {
-    display: inline-block;
-    text-align: center;
-    /* height: 90px; */
-    padding-top: 10px;
-}
-
-.THIS .icon_menu svg{
-    fill:#8A8A8A ;    
+    justify-content: space-around;
 }
 
 
@@ -90,22 +59,12 @@
 }
 
 
-/* Volkswagen addon */
-
-/*
-.THIS .jVPQXo {
-    width: 100%;
-    padding-bottom: 12px;
-    padding-top: 16px;
-    height: 60px;
-    transform: translateZ(0px);
-    color: rgb(0, 30, 80);
-    background-color: rgba(255, 255, 255, 0.98);
-    transition: height 0.3s ease-in 0s;
-}
-*/
+/*--------------- Volkswagen addon --------------- */
 
 
+
+
+/* Menu styling */
 
 .THIS .imNMYb {
     width: 100%;
@@ -158,6 +117,7 @@
 .THIS .dealer-portal-text{
     width: 400px;
     font-size: 0.8rem;
+    color: rgb(0, 30, 80);
 }
 
 .THIS .searchAndProfile{
@@ -168,4 +128,15 @@
 }
 .THIS .searchComp{
     width: 200px;
+}
+
+.THIS .navMenuItems{
+    margin-left: 70px;
+}
+
+.THIS .navbarContainer {
+    width: 1440px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
