--- a/force-app/mainPackage/default/aura/DE_Custom_Theme/DE_Custom_Theme.cmp
+++ b/force-app/mainPackage/default/aura/DE_Custom_Theme/DE_Custom_Theme.cmp
@@ -11,7 +11,7 @@
     <aura:attribute name="newHeader" type="Aura.Component[]" required="false"/>
     <aura:attribute name="showModal" type="Boolean" default="false" />
 
-   <!-- <aura:handler event="aura:locationChange" action="{!c.clickMenuItem}"/>-->
+   <!--  Event handler to detect url change  -->
     <aura:handler event="forceCommunity:routeChange" action="{!c.clickMenuItem}"/>
     
     <aura:attribute name="currentSection" type="String" default="/" />
@@ -26,49 +26,6 @@
         
         
         <div class="slds-grid slds-nowrap slds-grid_vertical-align-center menu_item_container">
-           
-            <!--
-            <div class="slds-col slds-size_1-of-12 menu_item">
-                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d3/Volkswagen_logo.png/183px-Volkswagen_logo.png" width="60"></img>
-            </div>
-            <div class="slds-col slds-size_1-of-12 menu_item">
-                <div class="dealerportal">
-                    Dealer<br/>
-                	Portal
-                </div>
-                
-            </div>
-            <div class="slds-col slds-size_1-of-12 menu_item">
-                <a onclick="{!c.clickMenuItem}" class="{! v.currentSection == '/' ? 'menu-link-active' : 'menu-link'}" data-item="/">
-                    <div class="menu_image">
-                        <lightning:icon iconName="utility:news" size="small" class="icon_menu" />    
-                    </div>     
-                    <div class="menu_text">
-                        Feed
-                    </div>
-                </a>
-            </div>
-            <div class="slds-col slds-size_1-of-12 menu_item">
-                <a onclick="{!c.clickMenuItem}" class="{! v.currentSection == '/today' ? 'menu-link-active' : 'menu-link'}" data-item="/today">
-                    <div class="menu_image">
-                        <lightning:icon iconName="utility:event" size="small" class="icon_menu" />    
-                    </div>     
-                    <div class="menu_text">
-                        Today
-                    </div>
-                </a>
-            </div>
-            <div class="slds-col slds-size_1-of-12 menu_item">
-                <a onclick="{!c.clickMenuItem}" class="{! v.currentSection == '/salesdesk' ? 'menu-link-active' : 'menu-link'}" data-item="/salesdesk">
-                    <div class="menu_image">
-                        <lightning:icon iconName="utility:screen" size="small" class="icon_menu" />    
-                    </div>     
-                    <div class="menu_text">
-                        Sales Desk
-                    </div>
-                </a>
-            </div>
-            -->
             <div class="navbarContainer">
                 <div class="navMenuItems">
                         {!v.navBar}
