--- a/force-app/main/default/aura/DPFeed/DPFeed.cmp
+++ b/force-app/main/default/aura/DPFeed/DPFeed.cmp
@@ -213,6 +213,10 @@
                             <aura:iteration items="{!v.fil}" var="fi">
                                 <!-- render feed item types of announcement, news, competitive //-->
                                 <aura:if isTrue="{!or(or(and(fi.type__c == 'announcement',v.announcement),and(fi.type__c == 'news' || fi.type__c == 'googlenews',v.news)),and(fi.type__c == 'competitive',v.competitive))}">
+
+
+                                    <c:feedItemRegular />
+                                    <!---
                                     <div class="feeditem regular">
                                         <div class="feeditem-background">
                                             <div class="feeditem-icon-container">
@@ -257,7 +261,7 @@
                                                     </div>
                                                     <p class="block-with-text">{!fi.text__c}</p>
                                                 </div>
-                
+                                            -->
                                                 <!--
                                                 <aura:if isTrue="{!fi.type__c eq 'news'}">
                 
@@ -283,9 +287,12 @@
                                                         </div>
                                                     </aura:set>
                                                 </aura:if>
-                                                -->
+                                               
                                         </div>
+                                         
                                     </div>
+                                    -->
+
                                 </aura:if>
                                 <!-- render feed item type of action required //-->
                                 <aura:if isTrue="{!and(fi.type__c == 'action required',v.action_required)}">
