--- a/force-app/main/default/aura/DPFeed/DPFeed.css
+++ b/force-app/main/default/aura/DPFeed/DPFeed.css
@@ -16,9 +16,13 @@
     font-size: smaller;
 }
 .THIS .feeditem {
-    width:100%;
     position: relative;
-    margin-bottom: 16px;
+    box-sizing: border-box;
+    width: 740px;
+    border-radius: 4px;
+    margin: 20px;
+    border: 1px solid #dfe4e0;
+    /*box-shadow: 0 0 8px 1px rgba(15,34,80,.05);*/
 }
 
 .THIS .regular {
@@ -26,7 +30,7 @@
 }
 
 .THIS .action {
-    height: 228px;
+    height: 250px;
     margin-bottom: 32px;
 }
 
@@ -49,19 +53,20 @@
 }
 
 .THIS .feeditem-action-background {
-    width: 90%;
-    height: 80px;
-    background: #F6F6F6;
-    border-radius: 8px;
-    box-shadow: 1px 1px 4px 1px rgba(0,0,0,0.16);
+    width: 100%;
+    height: 60px;
+    background: #f6f6f6;
     position: absolute;
-	bottom: 0px;
-    left: 5%;
+    bottom: 0;
     z-index: 1;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: flex-end;
+    float: right;
+}
+.THIS .feeditem-action-background c-vw-button{
+    margin-right: 10px;
 }
 
 .THIS .feeditem-icon-container {
@@ -76,6 +81,10 @@
     padding-left: 5px;
     padding-top: 1px;
     float: right;
+}
+
+.THIS .feeditem-action-buttons{
+
 }
 
 .THIS .action-color {
@@ -133,17 +142,18 @@
 }
 
 .THIS .feeditem-main {
-    width: 94.4%;
-    height: 172px;
+    width: 100%;
+    height: 190px;
     background: #ffffff;
-    border-radius: 8px;
-    box-shadow: 4px 0px 0px 0px rgba(0,0,0,0.2);
+    box-shadow: 0 0 8px 1px rgba(15,34,80,.05);
     position: absolute;
-	top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     z-index: 3;
-    display:flex;
-    flex-direction:row;
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid #dfe4e0;
+    border-radius: 0 4px;
 }
 
 .THIS .feed-image-container {
@@ -158,6 +168,7 @@
     flex-direction:column;
     width: 60%;
     padding: 8px;
+    font-size: 13px;
 }
 
 .THIS .feed-action-container {
@@ -167,14 +178,46 @@
     padding: 16px;
 }
 
+.THIS .feed-action-container a{
+        color: #4a90e2;
+}
+
 .THIS .source-date-container {
     padding: 8px 0;
     display: flex;
+    color: rgba(0,0,0,.85);
+    font-size: 12px;
+    font-weight: 300;
 }
 
 .THIS .action-text-container {
     display: block;
+    margin-bottom: 5px;
 }
+
+.THIS .action-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: .9rem;
+    font-weight: 700;
+}
+
+.THIS .action-title{
+    width: 320px;
+}
+
+.THIS .action-bluebox{
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+    background-color: #00b0f0;
+    color: #fff;
+    padding: 6px 15px;
+}
+
+
+
 
 .THIS .action-sla-container {
     padding: 8px;
