--- a/force-app/main/default/lwc/feedItemRegular/feedItemRegular.css
+++ b/force-app/main/default/lwc/feedItemRegular/feedItemRegular.css
@@ -13,8 +13,8 @@
 }
 
 .img-container{
-    height: 200px;
-    width: 240px;
+    height: 180px;
+    width: 200px;
      margin: 0;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
@@ -45,12 +45,13 @@
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 10px;
-    height: 50px;
+    height: 40px;
+    overflow: hidden;
 }
 
 .header .header-left{
     width: 320px;
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-weight: bold;
 }
 .header .header-right{
@@ -70,10 +71,12 @@
 
 
 .body{
-    overflow: hidden;
+   overflow: hidden;
     position: relative;
     line-height: 1.4em;
     max-height: 5.6em;
+    font-size: 13px;
+    padding-right: 100px;
 }
 
 .body::after{
@@ -96,11 +99,13 @@
 .footer a{
     color: black;
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 
 .footer span{
     text-decoration: underline;
-     font-size: 0.9rem;
+     font-size: 0.75rem;
      margin-right: 10px;
 }
+
+
